--- a/src/app/modulo-seguridad/login.component.html
+++ b/src/app/modulo-seguridad/login.component.html
@@ -1,14 +1,15 @@
+<!-- login.component.html -->
 <div class="login-container">
   <h2>Iniciar Sesión</h2>
-  <form (ngSubmit)="onLogin()">
+  <form (ngSubmit)="onLoginSubmit()" #loginForm="ngForm">
     <div class="form-group">
-      <label for="email">Correo Electrónico:</label>
+      <label for="email">Correo electrónico</label>
       <input type="email" id="email" name="email" [(ngModel)]="email" required>
     </div>
     <div class="form-group">
-      <label for="password">Contraseña:</label>
+      <label for="password">Contraseña</label>
       <input type="password" id="password" name="password" [(ngModel)]="password" required>
     </div>
-    <button type="submit">Iniciar Sesión</button>
+    <button type="submit" [disabled]="loginForm.invalid">Iniciar Sesión</button>
   </form>
 </div>
